# mixedmeasures

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  mixedmeasures.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run-stress-backend.sh  run_server.py
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  main.py
backend/scripts/: make_sav_fixture.py  schema_diff_harness.py
backend/tests/: conftest.py  test_556_identifier_hardening.py  test_analysis_columns_nominal_grouping.py  test_analysis_domain_cross_dataset_pairing.py  test_audio.py  test_audit.py  test_auth_endpoint_gate.py  test_auth_integration.py  test_backup.py  test_blind_mode.py  test_canvas.py  test_canvas_export.py  test_category_merge.py  test_code_analysis.py  test_code_equivalence.py  test_codeapplication_grain_sweep.py  test_codebook_cooccurrence_counts.py  test_coded_counts_participant_only.py  test_coder_analysis_filter.py  test_coder_attribution_payload.py  test_coder_count_inflation.py  test_coder_layers.py  test_coder_roster.py  test_coding_counts.py  test_coding_coverage.py  test_column_type_eligibility.py  test_comment_frequencies.py  test_comparisons.py  test_computed_columns.py  test_config_env_aliases.py  test_consensus.py  test_conversation_import_facilitator.py  test_correlations.py  test_cross_dataset_export_label_refs.py  test_cross_tabulation.py  test_csv_import.py  test_data_quality.py  test_database_revision.py  (+70 more)
(+642 files in other folders)
